--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
     </section>
 
-    <!-- About section -->
+   <!-- About section -->
 <section id="about" class="about">
     <div class="container">
         <h2>About <span class="gradient-text">Me</span></h2>
@@ -115,17 +115,17 @@
                             <p>Git & GitHub</p>
                         </div>
                     </div>
+                </div>
 
-                    <!-- Technology stack moved inside skills-grid -->
-                    <div class="tech-stack">
-                        <span class="tech-item">TypeScript</span>
-                        <span class="tech-item">JavaScript</span>
-                        <span class="tech-item">React</span>
-                        <span class="tech-item">React Native</span>
-                        <span class="tech-item">Shell</span>
-                        <span class="tech-item">AI</span>
-                        <span class="tech-item">HTML/CSS</span>
-                    </div>
+                <!-- Technology stack-->
+                <div class="tech-stack">
+                    <span class="tech-item">TypeScript</span>
+                    <span class="tech-item">JavaScript</span>
+                    <span class="tech-item">React</span>
+                    <span class="tech-item">React Native</span>
+                    <span class="tech-item">Shell</span>
+                    <span class="tech-item">AI</span>
+                    <span class="tech-item">HTML/CSS</span>
                 </div>
             </div>
         </div>
