--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <span class="gradient-text">DI</span>
                 </a>
                 <!-- Navigation links -->
-                <div id="home" class="navbar-links">
+                <div id="#home" class="navbar-links">
                     <a href="#about">About</a>
                     <a href="#experience">Experience</a>
                     <a href="#skills">Skills</a>
