--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <nav class="navbar">
             <div class="navbar-container">
                 <!-- Logo -->
-                <a href="home" class="navbar-logo">
+                <a href="#home" class="navbar-logo">
                     <span class="gradient-text">DI</span>
                 </a>
                 <!-- Navigation links -->
-                <div id="#home" class="navbar-links">
+                <div id="home" class="navbar-links">
                     <a href="#about">About</a>
                     <a href="#experience">Experience</a>
                     <a href="#skills">Skills</a>
